[package]
name = "currency-converter-v2"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "currency-api",
]

[dependencies]
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
clap = { version = "4.5.7", features = ["derive"] }
currency-api = { path = "./currency-api" }
serde = { version = "1.0.203", features = ["derive"] }
async-trait = "0.1.80"
reqwest = { version = "0.12.5", features = ["json"] }
